# agent-stream-kit

./: Cargo.toml  README.md
agent-stream-kit/: Cargo.toml  README.md
agent-stream-kit/examples/: board.rs
agent-stream-kit/examples/flows/: board.json
agent-stream-kit/src/: agent.rs  askit.rs  board_agent.rs  config.rs  context.rs  data.rs  definition.rs  error.rs  flow.rs  lib.rs  message.rs  output.rs  prelude.rs  runtime.rs
askit-cozodb-agents/: Cargo.toml  README.md
askit-cozodb-agents/src/: agents.rs
askit-llm-agents/: Cargo.toml  README.md
askit-llm-agents/src/: common.rs  lib.rs  mcp.rs  message.rs  ollama.rs  openai.rs  sakura_ai.rs
askit-rhai-agents/: Cargo.toml  README.md
askit-rhai-agents/src/: agents.rs  lib.rs
askit-rig-agents/: Cargo.toml  README.md
askit-rig-agents/src/: lib.rs  ollama.rs  openai.rs  prompt.rs  rig.rs
askit-std-agents/: Cargo.toml
askit-std-agents/src/: counter.rs  data.rs  display.rs  file.rs  image.rs  input.rs  lib.rs  stream.rs  string.rs  task.rs  time.rs  yaml.rs
src/: agent.rs  askit.rs  board_agent.rs  definition.rs  error.rs  flow.rs  lib.rs  message.rs  output.rs
tests/: counter_test.rs  flow_test.rs
tests/common/: mod.rs
