[package]
name = "agent-stream-kit"
version = "0.1.3"
edition = "2024"
description = "Agent Stream Kit"
authors = ["Akira Ishino <akira@lumilab.jp>"]
license = "Apache-2.0 OR MIT"

[dependencies]
async-trait = "0.1"
log = "0.4.25"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
