[workspace]
resolver = "3"
members = [
    "askit-cozodb-agents",
    "askit-llm-agents",
    "askit-rhai-agents",
    "askit-std-agents",
    "agent-stream-kit",
]

[workspace.package]
edition = "2024"
authors = ["Akira Ishino <akira@lumilab.jp>"]
license = "Apache-2.0 OR MIT"

[workspace.dependencies]
agent-stream-kit = { version = "0.10", path = "agent-stream-kit" }
async-trait = "0.1"
log = "0.4"
photon-rs = "0.3.3"
serde = "1"
serde_json = "1"
thiserror = "2"
tokio = "1"
