[package]
name = "agent-stream-kit"
version = "0.4.1"
description = "Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait = "0.1"
log = "0.4"
serde = { version = "1", features = ["derive", "rc"] }
serde_json = "1"
thiserror = "2"
tokio = { version = "1", features = ["rt", "rt-multi-thread", "sync"] }
