[package]
name = "agent-stream-kit"
version = "0.10.0"
description = "Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
async-trait.workspace = true
log.workspace = true
photon-rs = { workspace = true, optional = true }
serde = { workspace = true, features = ["derive", "rc"] }
serde_json.workspace = true
thiserror.workspace = true
tokio = { workspace = true, features = ["rt", "rt-multi-thread", "sync"] }

[dev-dependencies]
tokio = { workspace = true, features = ["macros"] }

[features]
default = ["image"]
image = ["photon-rs"]

[[example]]
name = "board"
