[package]
name = "askit-cozodb-agents"
version = "0.1.2"
description = "Cozo Agents for Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit = { version = "0.9", path = "../agent-stream-kit" }
cozo = { version = "0.7.6" }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
rayon = { version = "~1.10" } # https://github.com/cozodb/cozo/issues/298
