[package]
name = "askit-cozodb-agents"
version = "0.1.4"
description = "Cozo Agents for Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit.workspace = true
cozo = "0.7.6"
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
rayon = { version = "~1.10" } # https://github.com/cozodb/cozo/issues/298
