[package]
name = "askit-llm-agents"
version = "0.2.4"
description = "LLM Agents for Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit = { version = "0.6", path = "../agent-stream-kit" }
async-openai = { version = "0.29.3", optional = true }
ollama-rs = { version = "0.3.2", optional = true }
sakura-ai-rs = { version = "0.1.2", optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"

[features]
default = ["ollama", "openai", "sakura"]
ollama = ["ollama-rs"]
openai = ["async-openai"]
sakura = ["sakura-ai-rs"]
