[package]
name = "askit-llm-agents"
version = "0.3.3"
description = "LLM Agents for Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit = { version = "0.8", path = "../agent-stream-kit" }
async-openai = { version = "0.30.1", optional = true }
futures = { version = "0.3.31", optional = true }
ollama-rs = { version = "0.3.2", default-features = false, features = ["rustls", "stream"], optional = true }
sakura-ai-rs = { version = "0.1.2", features = ["stream"], optional = true }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio-stream = { version = "0.1.17", optional = true }

[features]
default = ["ollama", "openai", "sakura"]
ollama = ["ollama-rs", "tokio-stream"]
openai = ["async-openai", "futures"]
sakura = ["sakura-ai-rs", "tokio-stream"]
