[package]
name = "askit-rhai-agents"
version = "0.1.1"
description = "Rhai Agents for Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit.workspace = true
rhai = { version = "1.23.6", features = ["sync", "serde"] }
serde = { workspace = true, features = ["derive"] }
serde_json.workspace = true
