[package]
name = "askit-rig-agents"
version = "0.1.2"
description = "Rig Agents for Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit = { path = "../agent-stream-kit" }
async-trait.workspace = true
rig-core.workspace = true
serde_json.workspace = true
