[package]
name = "askit-rig-agents"
version = "0.2.0"
description = "Rig Agents for Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit = { version = "0.2", path = "../agent-stream-kit" }
async-trait = "0.1"
rig-core = "0.19"
serde_json = "1"
