[package]
name = "askit-std-agents"
version = "0.2.0"
description = "Standard Agents of Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit = { version = "0.2", path = "../agent-stream-kit" }
async-trait = "0.1"
chrono = "0.4"
cron = "0.15"
handlebars = "6"
log = "0.4"
regex = "1"
serde_json = "1"
tokio = { version = "1", features = ["time"] }
