[package]
name = "askit-std-agents"
version = "0.3.8"
description = "Standard Agents of Agent Stream Kit"
edition.workspace = true
authors.workspace = true
license.workspace = true

[dependencies]
agent-stream-kit.workspace = true
chrono = "0.4"
cron = "0.15"
handlebars = "6"
log.workspace = true
photon-rs = { workspace = true, optional = true }
regex = "1"
serde_json.workspace = true
serde_yaml_ng = { version = "0.10.0", optional = true }
tokio = { workspace = true, features = ["time"] }

[features]
default = ["image", "yaml"]
image = ["photon-rs"]
yaml = ["serde_yaml_ng"]
